# VRCJoinNotificator

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build-and-upload.yml
src/: function.rs  http_upload.rs  idms.rs  idms_log.rs  idms_pic.rs  image.rs  log_read.rs  main.rs  webhook.rs  xsoverlay.rs
