[package]
name = "VRCJoinNotificator"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
base64 = "0.22.1"

[dependencies.windows]
version = "0.58.0"
