[package]
name = "VRCJoinNotificator"
version = "0.3.2"
edition = "2021"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json", "multipart", "blocking"] }
tokio = { version = "1.42.0", features = ["full"] }
base64 = "0.22.1"
sysinfo = "0.33.1"
image = "0.25.6"
webp = "0.3.0"
tempfile = "3.20.0"

[dependencies.windows]
version = "0.58.0"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"